src/components/styles/editor.module.css
@import url(./dank-mono.css);

.editor {
  background-color: #292d3e;
  height: calc(100vh - 22px);
  flex: 1;
  flex-direction: column;
  display: flex;
  overflow: auto;
}

@media (max-width: 768px) {
  .editor {
    height: calc(100vh - 44px);
  }
}

.topBar {
  font-size: 0.8125em;
  display: flex;
  background-color: #32374c;
  height: 2.625em;
  align-items: center;
  color: #eeffff;
  padding-left: 2em;
}

.editorContent {
  overflow: auto;
  flex: 1;
  padding: 1em;
  font-family: "Dank Mono", monospace;
  font-feature-settings: "liga" on, "calt" on;
  font-size: 0.875em;
  color: #bfc7d5;
}

